Update Products.java